# scrypy

./: .gitignore  CITATION.cff  README.md  pyproject.toml
src/scrypy/: __init__.py  _deviance.py
tests/: test_deviance.py
