[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrypy"
version = "0.1.0"
description = "Binomial deviance feature selection for single-cell count data (AnnData)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.10",
    "numpy>=1.23",
    "pandas>=2.0",
    "scipy>=1.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["scrypy"]
